# open-dstore

./: .gitignore  CMakeLists.txt  Dockerfile  buildenv
.devcontainer/: devcontainer.json
include/dfx/: dstore_btree_verify.h  dstore_heap_verify.h  dstore_metadata_verify.h  dstore_page_verify.h  dstore_segment_verify.h  dstore_verify_context.h  dstore_verify_report.h
specs/001-dfx-page-verify/: data-model.md  design-cross-page-verify.md  design-single-page-verify.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dfx-page-verify/checklists/: requirements.md
specs/001-dfx-page-verify/contracts/: page-verify-api.md
src/: CMakeLists.txt
src/buffer/: dstore_buf_mgr.cpp  dstore_buf_mgr_temporary.cpp
src/dfx/: CMakeLists.txt  dstore_btree_verify.cpp  dstore_heap_verify.cpp  dstore_metadata_verify.cpp  dstore_page_verify.cpp  dstore_segment_page_verify.cpp  dstore_segment_verify.cpp  dstore_verify_context.cpp  dstore_verify_report.cpp
src/framework/: dstore_instance.cpp
src/heap/: dstore_heap_page_verify.cpp  dstore_heap_update.cpp
src/index/: dstore_btr_recycle_page_verify.cpp  dstore_index_page_verify.cpp
src/page/: dstore_fsm_page_verify.cpp
src/tablespace/: dstore_tbs_page_verify.cpp
src/undo/: dstore_undo_page_verify.cpp
tests/unittest/: CMakeLists.txt
tests/unittest/ut_dfx/: CMakeLists.txt  ut_btree_verify.cpp  ut_heap_page_verify.cpp  ut_heap_segment_verify.cpp  ut_index_page_verify.cpp  ut_metadata_verify.cpp  ut_page_verify_registry.cpp  (+2 more)
tools/: CMakeLists.txt
tools/dstore_verify/: CMakeLists.txt  dstore_verify_main.cpp
